# mnfrm

./: Cargo.toml  Dockerfile
.github/workflows/: ci.yml  publish.yml
src/: main.rs
