[package]
name = "mnfrm"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.5"
tokio =  { version = "1.48.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0.100"
tower-http = { version = "0.6.6", features = ["catch-panic"] }
rand = "0.9.2"
macaddr = "1.0.1"
rustc-hash = "2.1.1"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
tracing-journald = "0.3.1"
