[package]
name = "mnfrm"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.5"
tokio =  { version = "1.48.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0.100"
tower-http = { version = "0.6.6", features = ["catch-panic", "fs", "trace"] }
rand = "0.9.2"
macaddr = "1.0.1"
rustc-hash = "2.1.1"
tracing-loki = "0.2.6"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
url = "2.5.7"
image = "0.25.8"
base64 = "0.22.1"
hex = "0.4.3"
tower-service = "0.3.3"
tower-layer = "0.3.3"
bytes = "1.10.1"
http = "1.3.1"
http-body-util = "0.1.3"
